# Helmholtz-Sonic-Crystals

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  coverage.html  domain.ini  environment.yml  examples.html  genindex.html  hsc.domain_properties.html  hsc.eval.html  hsc.html  hsc.mesh.html  hsc.noise.html  hsc.preprocessing.html  hsc.solver.html  hsc.utility.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  run_on_docker.py  search.html  searchindex.js
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  doc.yml
_sources/: hsc.domain_properties.rst.txt  hsc.eval.rst.txt  hsc.mesh.rst.txt  hsc.noise.rst.txt  hsc.preprocessing.rst.txt  hsc.rst.txt  hsc.solver.rst.txt  hsc.utility.rst.txt  modules.rst.txt
_static/codecov/: class_index.html  d_0cc2d9c1573f2b7c_crystal_builder_py.html  d_0cc2d9c1573f2b7c_crystal_domain_builder_py.html  d_0cc2d9c1573f2b7c_gmsh_builder_py.html  d_0cc2d9c1573f2b7c_mesh_builder_py.html  d_7313daa62b352444_dataset_py.html  d_7313daa62b352444_helmholtz_py.html  d_7a6132e833b4ce60_gap_report_py.html  d_7a6132e833b4ce60_pressure_report_py.html  (+51 more)
examples/: c_shaped_sonic_crystal.ipynb  plane_wave.ipynb  utils.py
hsc/: dataset.py  helmholtz.py
scripts/: build_datasets.py  convergence_study_adiabatic_layers.py  create_dataset.py  domain.ini  plot_transmission_loss.py  run_on_docker.py
templates/: domain_c_shaped.ini  domain_cylindrical.ini  domain_none.ini  domain_perlin.ini
test/: conftest.py  fixtures.py  test_dataset.py  test_helmholtz.py
(+98 files in other folders)
